# rpi-iaq-monitor

./: .gitignore  BSEC_TIMING_SOLUTION.md  CMakeLists.txt  HARDWARE_COMPATIBILITY_REPORT.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  README_OPTIMIZED.md  example-config.yaml  iaq-monitor.service  main.cpp  monitor_performance.sh  start_iaq_optimized.sh
bsec/lib/: README.txt
bsec/src/: README.txt
docs/: DEPENDENCIES_BSEC.md
include/: air_quality_service.h  config_manager.h  enhanced_bsec_scheduling.h  homebridge_service.h
saved_state/: bsec_state_file
scripts/: apply_bsec_fix.sh  audit-bsec-files.sh  bsec_timing_fix.patch  fix_bsec_timing.sh  install-pre-commit-hook.sh  install-service.sh  require_bsec.sh
src/: ConfigManager.cpp  air_quality_service.cpp  air_quality_service.h  config_manager.cpp  constants.h  homebridge_service.cpp  precision_timing.h  simple_i2c_bus.cpp  simple_i2c_bus.h
